# radiosonda_PIcaro

./: .gitignore  LICENSE-CC-BY-4.0.md  NOTICE  README.SWL2001.md  README.md
lbm_applications/3_geolocation_on_lora_edge/: CMakeLists.txt
lbm_applications/3_geolocation_on_lora_edge/app_makefiles/: app_common.mk  board_L476.mk
lbm_applications/3_geolocation_on_lora_edge/main_geolocation/: bmp280.c  bmp280.h  bmp280_payload.c  bmp280_payload.h  example_options.h  main_geolocation.c
lbm_applications/3_geolocation_on_lora_edge/mcu_drivers/core/STM32L4xx/: stm32l4xx_hal_conf.h
lbm_applications/3_geolocation_on_lora_edge/smtc_hal_l4/: CMakeLists.txt  smtc_hal_i2c.c  smtc_hal_i2c.h
lbm_examples/main_examples/: example_options.h
specs/bme280-gnss-tracker/: FLASH_AND_CHIRPSTACK.md  README.md  SRS-000-overview.md  SRS-001-i2c-hal.md  SRS-002-bme280-driver.md  SRS-003-payload-format.md  SRS-004-app-integration.md  SRS-005-build-and-verify.md  pinout_diagram.html
specs/bme280-gnss-tracker/builds/: BUILD_MANIFEST.md  credentials.json  creds_eu868.h  creds_us915.h
specs/bmp280-gnss-tracker/: FLASH_AND_CHIRPSTACK.md  README.md  SRS-000-overview.md  SRS-002-bmp280-driver.md  SRS-003-payload-format.md  pinout_diagram.html
specs/bmp280-gnss-tracker/builds/: BUILD_MANIFEST.md  credentials.json  creds_eu868.h  creds_us915.h
specs/demos/: BUILD_MANIFEST.md  DEMOS_INSTRUCCIONES.md  REGISTRO_API_CHIRPSTACK.md  credentials.json
specs/demos/artifacts/: README.md
specs/exercises/: COMMON_BUILD.md  COMMON_CHIRPSTACK_API.md  COMMON_FLASH.md  README.md
specs/exercises/00_chirpstack-docker/: LICENSE  Makefile  README.md  docker-compose.yml  ignorar.txt
specs/exercises/00_chirpstack-docker/configuration/chirpstack-gateway-bridge/: chirpstack-gateway-bridge-basicstation-as923.toml  chirpstack-gateway-bridge-basicstation-as923_2.toml  (+35 more)
specs/exercises/01_periodical-uplink/: README.md  consume.py  credentials.json  provision.sh
specs/exercises/01_periodical-uplink/artifacts/: periodical-uplink_lr1110_eu868.elf  periodical-uplink_lr1110_eu868.hex  periodical-uplink_lr1110_us915.elf  periodical-uplink_lr1110_us915.hex
specs/exercises/01_periodical-uplink/scripts/: subscribe.sh
specs/exercises/02_bme280-gnss-tracker/: README.md  credentials.json  payload_decoder.js  provision.sh
specs/exercises/02_bme280-gnss-tracker/scripts/: upload_codec.sh
specs/exercises/02_bmp280-gnss-tracker/: README.md  credentials.json  payload_decoder.js  provision.sh
specs/exercises/02_bmp280-gnss-tracker/artifacts/: app_lr1110_EU_868.elf  app_lr1110_EU_868.hex  app_lr1110_US_915.elf  app_lr1110_US_915.hex
specs/exercises/02_bmp280-gnss-tracker/scripts/: subscribe.sh
specs/exercises/03_hw-modem/: README.md  credentials.json  provision.sh
specs/exercises/03_hw-modem/artifacts/: README.md  hw-modem_lr1110_multiband.elf  hw-modem_lr1110_multiband.hex
specs/exercises/03_hw-modem/scripts/: subscribe.sh
specs/exercises/04_wifi-region-detection/: README.md  credentials.json
specs/exercises/04_wifi-region-detection/artifacts/: README.md  wifi-region-detection_lr1110_multiband.elf  wifi-region-detection_lr1110_multiband.hex
specs/exercises/05_ttgo-lora32/: README.md  credentials.json  payload_decoder.js  provision.sh
specs/exercises/05_ttgo-lora32/esp-idf/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
specs/exercises/05_ttgo-lora32/scripts/: subscribe.sh  upload_codec.sh
specs/exercises/05_ttgo-lora32/sketches/: TTGO_LoRaWAN_v3.ino
specs/exercises/06_ttgo-bmp280/: README.md  credentials.json  payload_decoder.js  provision.sh
specs/exercises/06_ttgo-bmp280/scripts/: subscribe.sh  upload_codec.sh
specs/exercises/06_ttgo-bmp280/sketches/: TTGO_BMP280_v1.ino
specs/exercises/07_esp-1ch-gateway/: README.md  VERSIONS.md  configGway.example.h  configNode.example.h  register_gateway.sh
specs/exercises/08_radiosonda_picaro/: README.md  config_lorawan.h  radiosonda_picaro.ino  utilities.h
specs/exercises/08_radiosonda_picaro/chirpstack/: decoder.js
specs/exercises/09_radiosonda_picaro_full/: README.md  credentials.json  provision.sh
specs/exercises/09_radiosonda_picaro_full/chirpstack/: decoder.js
specs/exercises/09_radiosonda_picaro_full/firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
specs/exercises/09_radiosonda_picaro_full/firmware/main/: CMakeLists.txt  app_main.cpp  bme280.c  bme280.h  board_pins.h  config_lorawan.h  esp_hal.h  gps_l76k.c  gps_l76k.h  i2c0.c  i2c0.h  idf_component.yml  lorawan.cpp  lorawan.h  oled_sh1106.c  oled_sh1106.h  pcf8563.c  pcf8563.h  pmu_axp2101.c  pmu_axp2101.h  qmc6310.c  qmc6310.h  qmi8658.c  qmi8658.h  radio.cpp  radio.h  sdcard.c  sdcard.h  sensores_config.h  spi3.c  spi3.h  telemetry.c  telemetry.h  wifi_demo.c  wifi_demo.h
specs/exercises/10_dashboard-tkinter/: .gitignore  LICENSE  README.md  config.example.json  dashboard.py  mqtt_ingest.py  storage.py  theme.py
specs/exercises/11_dashboard-servidor-remoto/: .gitignore  README.md  config.example.json  dashboard.py  mqtt_ingest.py  replay.py  requirements.txt  selftest.py  storage.py
specs/exercises/_PLANTILLA/: README.md
specs/ttgo/TTGO_LoRaWAN_v3/: TTGO_LoRaWAN_v3.ino
wiki/: ChirpStack-en-5-minutos.md  Cómo-usar-el-proyecto.md  Ejercicio-00-ChirpStack.md  Ejercicio-01-Periodical-Uplink.md  Ejercicio-02-BMP280-GNSS.md  Ejercicio-03-Hardware-Modem.md  Ejercicio-04-Wi-Fi-Region-Detection.md  Ejercicio-05-TTGO-LoRa32.md  Ejercicio-06-TTGO-BMP280.md  Ejercicio-07-Gateway-1-canal.md  Ejercicio-08-Radiosonda-PICARO.md  Ejercicio-09-Radiosonda-PICARO-Full.md  Ejercicio-10-Dashboard-Mission-Control.md  Ejercicio-11-Dashboard-Servidor-Remoto.md  Glosario-y-recursos.md  Hardware-del-proyecto.md  Home.md  How-To-Compilar-el-TTGO-en-Arduino.md  How-To-Compilar-el-firmware.md  How-To-Dar-de-alta-un-LR1110-nuevo.md  How-To-Dar-de-alta-un-TTGO-nuevo.md  How-To-Flashear-y-ver-la-serie.md  How-To-Montar-un-gateway-de-1-canal.md  How-To-Provisionar-en-ChirpStack.md  How-To-Requisitos-e-instalación.md  Qué-es-LoRa.md  Qué-es-LoRaWAN.md  _Sidebar.md
(+45 files in other folders)
